[tool.poetry]
name = "gr-tracker"
version = "0.1.0"
description = ""
authors = ["Stefaan Van wal <stefaan.vanwal@colorado.edu>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
flask-migrate = "^4.0.2"
flask-login = "^0.6.2"
flask-mail = "^0.9.1"
flask-bootstrap = "^3.3.7.1"
flask-moment = "^1.0.5"
flask-babel = "^3.0.0"
elasticsearch = "^8.6.0"
jwt = "^1.3.1"
flask-wtf = "^1.1.1"
email-validator = "^1.3.0"
langdetect = "^1.0.9"
requests = "^2.28.2"
pytest = "^7.2.1"
redis = "^4.4.2"
rq = "^1.12.0"
python-dotenv = "^0.21.0"
flask-httpauth = "^4.7.0"
numpy = "^1.24.1"
flask-jsglue = "^0.3.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
